k8s-apps-deployment/marker-php/marker-php-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marker-php
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: marker-php
  template:
    metadata:
      labels:
        app: marker-php
    spec:
      hostAliases:
      - ip: "127.0.0.1"
        hostnames:
        - "ljpablo.marker"
        - "pabigbang.marker"
        - "mpbigbang.marker"
        - "mpbigbang.si.cratislab-test-k8s.cratis.cc"
        - "bigbang.marker"
        - "projekti.localenv"
        - "markerapp"
      - ip: "127.0.1.1"
        hostnames:
        - "dinobackend"
      containers:
      - image: docker-registry.cratis.cc/cratis/marker-php
        name: marker-php
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 300m
      imagePullSecrets:
      - name: regcred
