k8s-apps-deployment/marker-php/marker-php-mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  replicas: 1
  serviceName: mysql
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - name: tpc
              protocol: TCP
              containerPort: 3306
          resources:
            limits:
              cpu: 1000m
            requests:
              cpu: 500m
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        storageClassName: csi-cephfs-sc
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 20Gi
