k8s-apps-deployment/marker-php/marker-php-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: marker-php
  labels:
    app: marker-php
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: marker-php
